--- a/styles.css
+++ b/styles.css
@@ -18,15 +18,15 @@ body{
     background-color: black;
     color: white;
 }
-header{
-    margin-top: 20px;
+header {
+    margin-top: 0px;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     padding: 1rem 9%;
-    background-color: transparent;
-    filter: drop-shadow(10px);
+    background-color: black; /* Solid black background */
+    border-bottom: 3px solid black;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -230,4 +230,48 @@ span{
         width: 70vw;
         margin-top: 4rem;
     }
+}
+
+.skill {
+    margin: 1.5rem 0;
+}
+.skill p {
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+.skill-bar {
+    width: 100%;
+    height: 1.5rem;
+    background-color: #444;
+    border-radius: 10px;
+    overflow: hidden;
+}
+.skill-fill {
+    height: 100%;
+    background-color: #b74b4b;
+    transition: width 0.5s ease-in-out;
+}
+
+.edu-box {
+    margin: 2rem 0;
+    padding: 1.5rem;
+    background-color: #222;
+    border-left: 5px solid #b74b4b;
+    border-radius: 8px;
+}
+.edu-box h3 {
+    font-size: 2rem;
+    color: #b74b4b;
+}
+.edu-box p {
+    font-size: 1.6rem;
+}
+
+.contact p {
+    font-size: 1.8rem;
+    margin: 1rem 0;
+}
+.contact a {
+    color: #b74b4b;
+    text-decoration: underline;
 }
